.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_ProductSpec__c.object
<CustomObject>
    <description>Object used to map products to specifications.  These allows you to associated any number of additional attributes to the product using the common specifications referenced in the Spec table above.</description>
    <fields>
        <fullName>OMSProductName__c</fullName>
        <label>OMSProductName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSort__c</fullName>
        <description>This will sort products in the LTS app.</description>
        <inlineHelpText>This will sort products in the LTS app.</inlineHelpText>
        <label>ProductSort</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tariff_Code__c</fullName>
        <label>Tariff Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductID__c</fullName>
        <description>Reference to the product object</description>
        <formula>ccrz__Product__c + &apos;-&apos; +  ccrz__Spec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <label>Product Item</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Product Specs</relationshipLabel>
        <relationshipName>Product_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecValue__c</fullName>
        <description>The value that we are associating to this pairing. For example, if the specification is Processor Speed, the value might be 2.4GHz</description>
        <label>SpecValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Spec__c</fullName>
        <description>Reference to the specification object</description>
        <label>Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>Product Specs</relationshipLabel>
        <relationshipName>Product_Specs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Product Spec</label>
    <listViews>
        <fullName>Blended_Classes</fullName>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__Spec__c</columns>
        <columns>ccrz__SpecValue__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/1/2020 12:00 AM</value>
        </filters>
        <label>Blended Classes</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>ccrz__ProductID__c</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__SpecValue__c</columns>
        <columns>ccrz__Spec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/1/2020 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Product Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OMSProductName_no_Special_Characters</fullName>
        <active>false</active>
        <description>Validation Rule to ensure no special char are entered.</description>
        <errorConditionFormula>NOT( REGEX( OMSProductName__c, &quot;[a-zA-Z0-9]+&quot;))</errorConditionFormula>
        <errorDisplayField>OMSProductName__c</errorDisplayField>
        <errorMessage>Special Characters not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tariff_Code_Format</fullName>
        <active>false</active>
        <errorConditionFormula>!REGEX(Tariff_Code__c,&quot;^(\\d{4}\\.\\d{2}.\\d{4})?$&quot;)</errorConditionFormula>
        <errorDisplayField>ccrz__Product__c</errorDisplayField>
        <errorMessage>Please enter Tariff Code in the following format: 0000.00.0000</errorMessage>
    </validationRules>
</CustomObject>